[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/play_scene.gd" type="Script" id=1]
[ext_resource path="res://Graphics/background.png" type="Texture" id=2]
[ext_resource path="res://Graphics/background_1.png" type="Texture" id=3]
[ext_resource path="res://Graphics/background_2.png" type="Texture" id=4]
[ext_resource path="res://Graphics/background_3.png" type="Texture" id=5]
[ext_resource path="res://Graphics/background_4.png" type="Texture" id=6]
[ext_resource path="res://Scenes/dancers.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/new_dance_floor.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/digit_sequence.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/level_manager.gd" type="Script" id=11]
[ext_resource path="res://Scripts/audio_player.gd" type="Script" id=12]
[ext_resource path="res://Sounds/food_mismatch_01.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/new_wave_begin_01.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/food_match_01.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/menu_select_01.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/monster_start_spit_02.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/monster_spit_01.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/player_move_01.wav" type="AudioStream" id=19]
[ext_resource path="res://Sounds/food_select_change_01.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/game_over_01.wav" type="AudioStream" id=21]
[ext_resource path="res://Sounds/bg_music.ogg" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="play_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="background_color" type="Sprite" parent="."]
position = Vector2( 32, 32 )
z_index = -200
texture = ExtResource( 2 )

[node name="background_animated" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.713726 )
position = Vector2( 32, 32 )
z_index = -100
frames = SubResource( 1 )
playing = true

[node name="dancers" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 32, 40 )
z_index = -5

[node name="dance_floor" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 7 )
number_lights_per_drop = 7

[node name="player" parent="." instance=ExtResource( 9 )]
z_index = -1

[node name="player_score" parent="." instance=ExtResource( 10 )]
position = Vector2( 3, 3 )
value = 0

[node name="level_manager" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="food_type_indicator" type="Node2D" parent="."]
position = Vector2( 6, 0 )

[node name="audio_player" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 12 )

[node name="food_mismatch" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 13 )
volume_db = -12.0

[node name="new_wave_begin" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 14 )
volume_db = -9.0

[node name="food_match" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 15 )
volume_db = -11.0

[node name="menu_select" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 16 )
volume_db = -6.0

[node name="monster_spit" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 17 )
volume_db = -80.0

[node name="monster_start_spit" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 18 )
volume_db = -6.0

[node name="monster_end_spit" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 17 )
volume_db = -80.0
pitch_scale = 1.34

[node name="player_move" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 19 )
volume_db = -20.0

[node name="food_select_change" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 20 )
volume_db = -9.0

[node name="game_over" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 21 )
volume_db = -6.0

[node name="bg_music" type="AudioStreamPlayer" parent="audio_player"]
stream = ExtResource( 22 )
volume_db = -3.0
autoplay = true
